# tnh-scene-compiler

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  run_gui.py  tnh_scene_compiler.spec
allowlists_base/: _meta.yaml  character_methods.yaml  characters.yaml  condition_functions.yaml  fx.yaml  history_events.yaml  interpolation.yaml  interpolation_custom.yaml  locations.yaml  locations_overrides.yaml  looks.yaml  mod_operations.yaml  personalities.yaml  run_operations.yaml  sfx.yaml  stages.yaml  traits.yaml
docs/: dev_guide.md  format_spec.md  integration_guide.md  modder_setup.md  project_setup.md  quick_start.md  scene_cheatsheet.md  writer_guide.md
scripts/: build_release.py  compile.bat  compile.sh  generate-cheatsheet.bat  import-thumbnails.bat  import_thumbnails.py  refresh-allowlists.bat
templates/: metadata_init.rpy.tmpl  runtime_stub.rpy.tmpl  testing_eval.rpy.tmpl
tests/: conftest.py  test_action_builder.py  test_cheatsheet_end_to_end.py  test_cheatsheet_loader.py  test_cheatsheet_renderer.py  test_choice.py  test_codegen.py  test_condition_builder.py  test_directive_parser.py  test_end_to_end.py  test_expr_parser.py  test_fx_custom_merge.py  test_if_chain.py  test_lexer.py  test_new_scene_dialog.py  test_paren_parser.py  test_parser.py  test_refresh_arms.py  test_refresh_characters.py  test_refresh_condition_functions.py  test_refresh_end_to_end.py  test_refresh_faces.py  test_refresh_history_events.py  test_refresh_interpolation.py  test_refresh_locations.py  test_refresh_looks.py  test_refresh_moods.py  test_refresh_outfits.py  test_refresh_personalities.py  test_refresh_poses.py  test_refresh_scaffolds.py  test_refresh_sfx.py  test_refresh_stages.py  test_refresh_traits.py  test_refresh_writer.py  test_refresh_writer_grouped.py  test_validator.py
tnh_generate_cheatsheet/: __init__.py  __main__.py  loader.py  models.py  renderer.py
tnh_refresh_allowlists/: __init__.py  __main__.py  comments.py  models.py  scanner.py  writer.py
tnh_scene_compiler/: __init__.py  __main__.py  action_builder.py  allowlists.py  ast_nodes.py  codegen.py  condition_builder.py  config.py  directive_parser.py  dsl.py  editor.py  errors.py  expr_parser.py  gui.py  (+8 more)
(+93 files in other folders)
