[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tnh-scene-compiler"
version = "0.1.0"
description = "Fountain-TNH scene compiler for The Null Hypothesis (Ren'Py game)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dnd = [
    "tkinterdnd2>=0.3",
]
build = [
    "pyinstaller>=6.0",
    "tkinterdnd2>=0.3",
]

[project.scripts]
tnh-scene-compiler = "tnh_scene_compiler.__main__:main"

[project.gui-scripts]
tnh-scene-compiler-gui = "tnh_scene_compiler.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
