[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tnh-scene-compiler"
version = "0.1.1"
description = "Fountain-TNH scene compiler for The Null Hypothesis (Ren'Py game)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dnd = ["tkinterdnd2>=0.3"]
build = ["pyinstaller>=6.0", "tkinterdnd2>=0.3"]
thumbnails = ["Pillow>=10.0"]

[project.scripts]
tnh-scene-compiler = "tnh_scene_compiler.__main__:main"
tnh-refresh-allowlists = "tnh_refresh_allowlists.__main__:main"
tnh-generate-cheatsheet = "tnh_generate_cheatsheet.__main__:main"

[project.gui-scripts]
tnh-scene-compiler-gui = "tnh_scene_compiler.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
